# chords

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  reset_db.sh
.github/workflows/: docker-image.yml
authentication/management/commands/: wait_for_database.py
authentication/tests/: test_admin.py
chords/: admin.py  constants.py  forms.py  models.py  utils.py  views.py
chords/fixtures/: chords_test.json
chords/migrations/: 0001_initial.py
chords/tests/: factories.py  test_admin.py  test_models.py  test_utils.py
docker/: entrypoint.sh  nginx.conf
settings/: asgi.py  common.py  default.py  docker.py  urls.py  wsgi.py
