[tool.poetry]
name = "chords"
version = "0.1.0"
description = ""
authors = ["Massimiliano Ravelli <massimiliano.ravelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
psycopg = {extras = ["binary"], version = "^3.1.10"}
fontawesomefree = "^6.4.2"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
